# DockerPortInfo

./: .env.default  .gitattributes  .gitignore  PROJECT.md  README.md  pyproject.toml
.claude/: settings.json
.omc/: project-memory.json
.omc/state/: last-tool-error.json
.omc/state/sessions/ff11d9e1-12f5-47c3-b4c2-2227edf8c5d2/: session-started.json
deploy/: logrotate.example  nginx.conf.example
res/: app.js  index.html  style.css
samples/: docker_ps_primary.txt  docker_ps_secondary.txt
scripts/: launch_server.sh  send_docker_ps.sh  setup.sh
src/: __init__.py  app.py  config.py  models.py  parser.py  store.py
