[project]
name = "dockerportinfo"
version = "0.1.0"
description = "GPU 서버(Backend.ai/Docker) 컨테이너의 이미지·포트 매핑 정보를 수집/표시하는 FastAPI 모니터"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
]

[tool.uv]
package = false
